<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufabc.padm.intentdemo.ImplicitIntentFilterTest"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/implicit_intent_instruction"/>

    <Button android:id="@+id/pick_button"
        android:text="@string/intent_filter_test_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TableLayout
        android:id="@+id/contact_show"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="0"
        android:padding="15dp"
        android:visibility="gone">
        <TextView android:id="@+id/contato_item_nome"
            android:textStyle="bold"
            android:textSize="20dp"/>
        <TableRow>
            <TextView android:text="@string/contato_item_email_label"
                android:textStyle="bold"/>
            <TextView android:id="@+id/contato_item_email" />
        </TableRow>
        <TableRow>
            <TextView android:text="@string/contato_item_endereco_label"
                android:textStyle="bold"/>
            <TextView android:id="@+id/contato_item_endereco"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/contato_item_telcom_label"
                android:textStyle="bold"/>
            <TextView android:id="@+id/contato_item_telcom"/>
        </TableRow>
        <TableRow>
            <TextView android:text="@string/contato_item_telres_label"
                android:textStyle="bold"/>
            <TextView android:id="@+id/contato_item_telres"/>
        </TableRow>

    </TableLayout>

</LinearLayout>
