<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufabc.padm.intentdemo.ExplicitIntentWithExtras"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <EditText
        android:id="@+id/intent_extra_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/intent_extra_nome_hint"/>
    <EditText
        android:id="@+id/intent_extra_ra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/intent_extra_ra_hint"/>
    <Button android:id="@+id/intent_extra_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intent_extra_send"/>

</LinearLayout>
