<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.edu.ufabc.padm.intentdemo.ExplicitIntentWithFlags"
    android:orientation="vertical"
    >

    <TextView android:id="@+id/task_id_message"
        android:text="@string/task_id_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"/>
    <Button android:id="@+id/activate_button_no_flags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate_button_no_flags_text"/>
    <Button android:id="@+id/activate_button_flags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate_button_flags_text"/>

</LinearLayout>
